--- a/DiageoMDMWeb/src/main/resources/ValidationMessages_en.properties
+++ b/DiageoMDMWeb/src/main/resources/ValidationMessages_en.properties
@@ -3,3 +3,4 @@
 # and open the template in the editor.
 correo.pattern=Invalid email format
 size.invalido=Field size can not exceed {max} characters
+password.rules=Password does not meet the requirements
