--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -88,3 +88,57 @@ seg_nombre=Segment Name
 seg_segmento=Segment
 sub_seg_nombre=SugSegment Name
 sub_seg_subsegmento=SubSegment
+m_distri_crear=Create distributor
+m_distri_consultar=Search distributor
+m_distri_nombre=Distributor name
+cam_pass_header_pass_rules=Password rules
+cam_pass_pass_rules=At least 8 characters
+cam_pass_pass_rules_1=Should include letters and numbers, with at leats one letter uppercase
+cam_pass_pass_rules_2=Should include at leats one special character "@#$%^&+="
+cam_pass_good=Good
+cam_pass_strong=Strong
+cam_pass_weak=Weak
+cam_pass_promt=Please enter a password
+out_outlet=Outlet
+out_datos_basicos=Basic data
+out_clasificacion=Segmentation
+out_ubicacion=Location
+out_datos_contacto=Concact data
+out_otros_datos=Other data
+out_razon_social=Business name
+out_kiernan=ID Kiernan
+out_codigo_ean=EAN code
+out_punto_venta=Point of sale
+out_cod_cliente_distri=Distributor client code
+out_nit=NIT
+out_nombre_propietario=Owner name
+out_apellidos_propietario=Owner surname
+out_potencial=Potential
+out_distribuidor=Distributor
+out_distri_depto=Distributor departament
+out_out_depto=Outlet departament
+out_direccion=Address
+out_celular=Cell phone
+out_tel_uno=Phone one
+out_tel_dos=Phone two
+out_barrio=Neighborhood
+out_linea_negocio=Line of business
+out_tipo_outlet=Type
+out_tipo_natural=Natural
+out_tipo_juri=Legal
+out_nombre=Outlet name
+out_out_mpio=Outlet town
+out_distri_mpio=Distributor town
+cam_pass_used=The entered password was used
+usu_chain=Chain
+usu_edit_detail=Edit detail
+usu_edit_level=Edit level
+out_seg_functional=Functional segmentation
+out_seg_potential=Potential segmentation
+btn_select_all=Select all
+btn_unselect_all=Unselect all
+btn_acept=Acept
+btn_cancel=Cancel
+m_distri_location=Location distributor
+m_distri_location_create=Create location distributor
+m_distri_location_search=Search location distributor
