--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -142,3 +142,10 @@ btn_cancel=Cancel
 m_distri_location=Location distributor
 m_distri_location_create=Create location distributor
 m_distri_location_search=Search location distributor
+btn_add=Add
+btn_remove=Delete
+btn_edit=Edit
+usu_mjs_distri_exists=\nThe distributor already exists in the table
+usu_add_to_user=Distributor add to the user
+usu_distri_of=Distributor of
+out_management=MANAGEMENT OF OUTLET
