--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -145,7 +145,7 @@ m_distri_location_search=Search location distributor
 btn_add=Add
 btn_remove=Delete
 btn_edit=Edit
-usu_mjs_distri_exists=\nThe distributor already exists in the table
+usu_msg_distri_exists=The distributor already exists in the table
 usu_add_to_user=Distributor add to the user
 usu_distri_of=Distributor of
 out_management=MANAGEMENT OF OUTLET
