--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -21,10 +21,10 @@ sis_volver_login=Back to login page
 sis_page_error=The URL you entered is incorrect
 rememberme=Remember me?
 welcome=Welcome
-ingreso_fallido=Failed login 
+ingreso_fallido=Login failed
 ingreso_exitoso=Successful login
-user_locked=User locked, please call to the administrator
-m_perfil=Profile
+user_locked=User blocked, please call the administrator
+m_perfil=Profile Management
 m_mis_datos=My data
 m_cambiar_contrase=Change password
 m_idioma=Change language
@@ -45,56 +45,56 @@ cam_pass_actual_nueva_no_iguales=The new password can not be equal to the curren
 cam_pass_repetir_contra=Repeat password
 cam_pass_nueva_contra=New password
 cam_pass_actual=Current password
-m_usuario=User management
-m_administrador=Admnistrator management
+m_usuario=User Management
+m_administrador=Admnistrator Management
 m_usuario_crear=Create user
-m_usuario_consultar=Search user
-m_segmento=Segment management
-m_segmento_crear=Create management
-m_segmento_consultar=Search management
-m_segmento_sub=Subsegment management
-m_segmento_sub_crear=Create subsegment
-m_segmento_sub_consultar=Search subsegment
-m_canal=Channel management
-m_canal_crear=Create channel
-m_canal_consultar=Search channel
-m_canal_sub=Subchannel management
-m_canal_sub_crear=Create subchannel
-m_canal_sub_consultar=Search subchannel
+m_usuario_consultar=Check user
+m_segmento=Segment Management
+m_segmento_crear=Create Segment
+m_segmento_consultar=Check Segment
+m_segmento_sub=Sub Segment Management
+m_segmento_sub_crear=Create Sub Segment
+m_segmento_sub_consultar=Check Sub Segment
+m_canal=Channel Management
+m_canal_crear=Create Channel
+m_canal_consultar=Check Channel
+m_canal_sub=Sub Channel Management
+m_canal_sub_crear=Create Sub Channel
+m_canal_sub_consultar=Check Sub Channel
 m_outlet=Outlet
-m_outlet_crear=Create outlet
-m_outlet_consultar=Search outlet
-m_outlet_carga=Massive load of outlets
+m_outlet_crear=Create Outlet
+m_outlet_consultar=Search Outlet
+m_outlet_carga=Massive load of Outlets
 m_battleground=Battleground
-m_battleground_crear=Create battleground
-m_battleground_consultar=Search battleground
+m_battleground_crear=Create Battleground
+m_battleground_consultar=Search Battleground
 m_distribuidor=Distributor
-m_distribuidor_create=Create distributor
-m_distribuidor_consultar=Search distributor
+m_distribuidor_create=Create Distributor
+m_distribuidor_consultar=Check Distributor
 usu_correo_existe=The user with the mail entered, already exist
 seleccion=-Select-
 btn_detalle=Detail
 usu_mis_datos=Data modified successfully
 usu_erro_mis_datos=Error saving data
 btn_regresar=Back
-estado=State
+estado=Status
 can_nombre=Channel Name
 sis_datos_guardados_exito=Data saved successfully
 sis_datos_guardados_sin_exito=Does not save the changes
-sub_can_nombre=SubChannel Name
+sub_can_nombre=Sub Channel Name
 can_canal=Channel
-sub_subcanal=SubChannel
+sub_subcanal=Sub Channel
 seg_nombre=Segment Name
 seg_segmento=Segment
-sub_seg_nombre=SugSegment Name
-sub_seg_subsegmento=SubSegment
-m_distri_crear=Create distributor
-m_distri_consultar=Search distributor
+sub_seg_nombre=Sub Segment Name
+sub_seg_subsegmento=Sub Segment
+m_distri_crear=Create Distributor
+m_distri_consultar=Check Distributor
 m_distri_nombre=Distributor name
 cam_pass_header_pass_rules=Password rules
 cam_pass_pass_rules=At least 8 characters
-cam_pass_pass_rules_1=Should include letters and numbers, with at leats one letter uppercase
-cam_pass_pass_rules_2=Should include at leats one special character "@#$%^&+="
+cam_pass_pass_rules_1=Should include letters and numbers, with at least one letter uppercase
+cam_pass_pass_rules_2=Should include at least one special character "@#$%^&+="
 cam_pass_good=Good
 cam_pass_strong=Strong
 cam_pass_weak=Weak
@@ -103,7 +103,7 @@ out_outlet=Outlet
 out_datos_basicos=Basic data
 out_clasificacion=Segmentation
 out_ubicacion=Location
-out_datos_contacto=Concact data
+out_datos_contacto=Contact data
 out_otros_datos=Other data
 out_razon_social=Business name
 out_kiernan=ID Kiernan
@@ -115,8 +115,8 @@ out_nombre_propietario=Owner name
 out_apellidos_propietario=Owner surname
 out_potencial=Potential
 out_distribuidor=Distributor
-out_distri_depto=Distributor departament
-out_out_depto=Outlet departament
+out_distri_depto=Distributor region
+out_out_depto=Outlet region
 out_direccion=Address
 out_celular=Cell phone
 out_tel_uno=Phone one
@@ -129,7 +129,7 @@ out_tipo_juri=Legal
 out_nombre=Outlet name
 out_out_mpio=Outlet town
 out_distri_mpio=Distributor town
-cam_pass_used=The entered password was used
+cam_pass_used=The password was used before
 usu_chain=Chain
 usu_edit_detail=Edit detail
 usu_edit_level=Edit level
@@ -137,15 +137,73 @@ out_seg_functional=Functional segmentation
 out_seg_potential=Potential segmentation
 btn_select_all=Select all
 btn_unselect_all=Unselect all
-btn_acept=Acept
+btn_acept=Accept
 btn_cancel=Cancel
-m_distri_location=Location distributor
-m_distri_location_create=Create location distributor
-m_distri_location_search=Search location distributor
+m_distri_location=Distributor location
+m_distri_location_create=Create location Distributor
+m_distri_location_search=Check location Distributor
 btn_add=Add
 btn_remove=Delete
 btn_edit=Edit
 usu_msg_distri_exists=The distributor already exists in the table
 usu_add_to_user=Distributor add to the user
 usu_distri_of=Distributor of
-out_management=MANAGEMENT OF OUTLET
+out_management=OUTLETS MANAGEMENT
+admin=Administrator
+father=Father
+is_father=Is father
+code=Code
+m_chain_create=Create Chain
+m_chain_search=Check Chain
+distri_father=Main Distributor
+m_management_potential=Potential Management
+m_potential_create=Create Potential
+m_potential_search=Check Potential
+m_report=Reports
+m_report_create_outlet=Create Outlets report
+m_report_create_distributor=Create Distributors report
+m_report_outlet_pendding=Pendings Outlets
+m_report_user=User Report
+sis_approbation_masive=Approved records
+usu_msg_segment_exists=The segment has already been added.
+usu_msg_all=All
+usu_msg_validate_list_permission=There are unvalidated records in the permissions list.
+usu_msg_validate_list_permission_distributor=No added distributors to this user.
+out_management_new=NEW OUTLETS
+out_management_old=EXISTING OUTLETS MANAGEMENT
+out_approbation_massive=Massive approval
+out_massive_message_reject=Outlet rejected by segmentation.
+out_message_not_potential=No potential segmentation.
+sta_approval=Approved
+sta_reject=Rejected
+loc_mpio=Town
+loc_depto=Region
+dis_commercial_management=Commercial Management
+dis_branch=Office
+pot_range=Rank
+pot_new_client=New client
+pot_old_client=Old client
+pot_type_client=Client type
+pot_value_segment=Segmentation value
+pot_value_initial=Initial value
+pot_value_final=Final value
+pot_limit=Limits
+chain_code_chain_father=Chain code
+chain_code_ean=EAN code
+chain_name=Chain name
+chain_business_name=Business name
+chain_code_pdv=PDV code
+chain_code_ean_pdv=EAN code
+chain_name_pdv=PDV name
+chain_cluster=Cluster
+chain_phone=Phone
+chain_id=Id Chain
+chain_city=City
+param=Parameters
+param_segment_query=Query parameters
+regional=Regional
+regional_create=Create Regional
+regional_search=Check Regional
+rel_cus=Customer relationship
+athena_code=Athena code
+param_message_duplicate=The Sub Segment was added to the list of parameters
