--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/message/Messages_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/message/Messages_en.properties
@@ -3,5 +3,5 @@
 # and open the template in the editor.
 javax.faces.component.UIInput.REQUIRED = {0} Required field.
 javax.faces.component.UIInput.REQUIRED_detail = {0} Required field.
-primefaces.password.INVALID_MATCH=New password should match with repeat pass
-primefaces.password.INVALID_MATCH_detail=New password should match with repeat pass
+primefaces.password.INVALID_MATCH=Invalid match
+primefaces.password.INVALID_MATCH_detail=Invalid match
