--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/message/Messages.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/message/Messages.properties
@@ -5,3 +5,5 @@ javax.faces.component.UIInput.REQUIRED = {0} campo requerido.
 javax.faces.component.UIInput.REQUIRED_detail = {0} campo requerido.
 primefaces.password.INVALID_MATCH = La contrase\u00f1a nueva no coincide 
 primefaces.password.INVALID_MATCH_detail = Contrase\u00f1a nueva debe coincidir con repetir contrase\u00f1a
+javax.faces.converter.DoubleConverter.DOUBLE=Debe ingresar un valor n\u00famerico
+javax.faces.converter.DoubleConverter.DOUBLE_detail=Debe ingresar un valor n\u00famerico
