--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -207,3 +207,46 @@ regional_search=Check Regional
 rel_cus=Customer relationship
 athena_code=Athena code
 param_message_duplicate=The Sub Segment was added to the list of parameters
+tittle_app=Outlet Database
+description=Description
+report=Report
+invalid_entry=Invalid entry
+invalid_link=The link already expired, create another link in the option <b>Forgot your password?</b> , on the login page
+btn_reject=Reject
+msg_mail_send_recover_password=A link was sent to recover the password to your mail.
+m_report_casuistry=Casuistry
+usu_permission=Permissions
+cam_pass_current_pass_dont_match=The password entered in the field current password is not the same as that registered.
+cam_pass_msg_update_success=The password was changed successfully, please return to the login page.
+out_code=Outlet code
+out_phones=Phones
+out_type_phone=Phone type
+out_number=Number
+out_ocs_1=Ocs primary
+out_ocs_2=Ocs secondary
+out_website=Web site
+out_verification_number=Verification number
+out_wine=Wine
+out_beer=Beer
+out_spirtis=Spirtis
+out_msg_3party_exist=The selected distributor has already been added
+loc_latitude=Latitude
+loc_longitude=Longitude
+sta_pending_tmc=Pending TMC
+sta_pending_kam=Pending KAM
+sta_pending_commercial_manager=Pending Commercial Manager
+status=Status
+active=Active
+inactive=Inactive
+locked=Locked
+pot_exclusive=Excluyente
+pot_inclusive=Incluyente
+chain_msg_phone_pattern=The phone must be numeric
+chain_msg_phone_empty=The phone number can not be empty
+chain_msg_customer_empty=Enter the name of a client.
+report_message_empty_list=The query returns no result.
+fs_account=My account
+mail_recover_pass=Recover password
+customer=Customer
+customer_msg_equal=The selected customer has already been added
+mail_user_creation=Create user, OUTLETDATABASE
