--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -16,13 +16,13 @@ recover_pass=Recover password
 error=Error
 info=Information
 advertencia=Warning
-sis_user_pass=\nMail and / or password, incorrect
+sis_user_pass=Mail and / or password incorrect
 sis_volver_login=Back to login page
 sis_page_error=The URL you entered is incorrect
 rememberme=Remember me?
 welcome=Welcome
-ingreso_fallido=Login failed
-ingreso_exitoso=Successful login
+ingreso_fallido=Last failed login:
+ingreso_exitoso=Last successful login:
 user_locked=User blocked, please call the administrator
 m_perfil=Profile Management
 m_mis_datos=My data
@@ -34,13 +34,13 @@ usu_num_doc=Document number
 usu_tipo_doc=Document type
 usu_correo=Mail
 usu_apellidos=Last Name
-usu_nombres=Names
+usu_nombres=Name
 usu_creado_fallo=Error creating user
 usu_activo=Active
 usu_creado_exito=User created successfully
 cam_pass_cambio_fallo=The password can not be changed
 cam_pass_cambio_exitoso=Password changed successfully
-cam_pass_primer_ingreso=This is your first entry, you must change the password before continuing
+cam_pass_primer_ingreso=This is your first entry, you must change the password before continue
 cam_pass_actual_nueva_no_iguales=The new password can not be equal to the current password
 cam_pass_repetir_contra=Repeat password
 cam_pass_nueva_contra=New password
@@ -63,24 +63,24 @@ m_canal_sub_crear=Create Sub Channel
 m_canal_sub_consultar=Check Sub Channel
 m_outlet=Outlet
 m_outlet_crear=Create Outlet
-m_outlet_consultar=Search Outlet
+m_outlet_consultar=Check Outlet
 m_outlet_carga=Massive load of Outlets
 m_battleground=Battleground
 m_battleground_crear=Create Battleground
-m_battleground_consultar=Search Battleground
+m_battleground_consultar=Check Battleground
 m_distribuidor=Distributor
 m_distribuidor_create=Create Distributor
 m_distribuidor_consultar=Check Distributor
 usu_correo_existe=The user with the mail entered, already exist
 seleccion=-Select-
-btn_detalle=Detail
+btn_detalle=See detail
 usu_mis_datos=Data modified successfully
 usu_erro_mis_datos=Error saving data
 btn_regresar=Back
 estado=Status
 can_nombre=Channel Name
 sis_datos_guardados_exito=Data saved successfully
-sis_datos_guardados_sin_exito=Does not save the changes
+sis_datos_guardados_sin_exito=Changes were not saved
 sub_can_nombre=Sub Channel Name
 can_canal=Channel
 sub_subcanal=Sub Channel
@@ -93,7 +93,7 @@ m_distri_consultar=Check Distributor
 m_distri_nombre=Distributor name
 cam_pass_header_pass_rules=Password rules
 cam_pass_pass_rules=At least 8 characters
-cam_pass_pass_rules_1=Should include letters and numbers, with at least one letter uppercase
+cam_pass_pass_rules_1=Should include letters and numbers, with at least one uppercase letter
 cam_pass_pass_rules_2=Should include at least one special character "@#$%^&+="
 cam_pass_good=Good
 cam_pass_strong=Strong
@@ -112,7 +112,7 @@ out_punto_venta=Point of sale
 out_cod_cliente_distri=Distributor client code
 out_nit=NIT
 out_nombre_propietario=Owner name
-out_apellidos_propietario=Owner surname
+out_apellidos_propietario=Owner lastname
 out_potencial=Potential
 out_distribuidor=Distributor
 out_distri_depto=Distributor region
@@ -130,7 +130,7 @@ out_nombre=Outlet name
 out_out_mpio=Outlet town
 out_distri_mpio=Distributor town
 cam_pass_used=The password was used before
-usu_chain=Chain
+usu_chain=KA
 usu_edit_detail=Edit detail
 usu_edit_level=Edit level
 out_seg_functional=Functional segmentation
@@ -145,16 +145,16 @@ m_distri_location_search=Check location Distributor
 btn_add=Add
 btn_remove=Delete
 btn_edit=Edit
-usu_msg_distri_exists=The distributor already exists in the table
+usu_msg_distri_exists=The distributor already exists in the database
 usu_add_to_user=Distributor add to the user
-usu_distri_of=Distributor of
+usu_distri_of=Distributors of
 out_management=OUTLETS MANAGEMENT
 admin=Administrator
 father=Father
 is_father=Is father
 code=Code
-m_chain_create=Create Chain
-m_chain_search=Check Chain
+m_chain_create=Create KA
+m_chain_search=Check KA
 distri_father=Main Distributor
 m_management_potential=Potential Management
 m_potential_create=Create Potential
@@ -162,18 +162,18 @@ m_potential_search=Check Potential
 m_report=Reports
 m_report_create_outlet=Create Outlets report
 m_report_create_distributor=Create Distributors report
-m_report_outlet_pendding=Pendings Outlets
+m_report_outlet_pendding=Pending Outlets
 m_report_user=User Report
-sis_approbation_masive=Approved records
+sis_approbation_masive=Records approved
 usu_msg_segment_exists=The segment has already been added.
 usu_msg_all=All
 usu_msg_validate_list_permission=There are unvalidated records in the permissions list.
-usu_msg_validate_list_permission_distributor=No added distributors to this user.
-out_management_new=NEW OUTLETS
+usu_msg_validate_list_permission_distributor=User does not have Distributors assigned
+out_management_new=NEW OUTLETS MANAGEMENT
 out_management_old=EXISTING OUTLETS MANAGEMENT
 out_approbation_massive=Massive approval
 out_massive_message_reject=Outlet rejected by segmentation.
-out_message_not_potential=No potential segmentation.
+out_message_not_potential=Without potential segmentation
 sta_approval=Approved
 sta_reject=Rejected
 loc_mpio=Town
@@ -188,16 +188,16 @@ pot_value_segment=Segmentation value
 pot_value_initial=Initial value
 pot_value_final=Final value
 pot_limit=Limits
-chain_code_chain_father=Chain code
+chain_code_chain_father=KA code
 chain_code_ean=EAN code
-chain_name=Chain name
+chain_name=KA name
 chain_business_name=Business name
 chain_code_pdv=PDV code
 chain_code_ean_pdv=EAN code
 chain_name_pdv=PDV name
 chain_cluster=Cluster
 chain_phone=Phone
-chain_id=Id Chain
+chain_id=Id KA
 chain_city=City
 param=Parameters
 param_segment_query=Query parameters
@@ -213,12 +213,12 @@ report=Report
 invalid_entry=Invalid entry
 invalid_link=The link already expired, create another link in the option <b>Forgot your password?</b> , on the login page
 btn_reject=Reject
-msg_mail_send_recover_password=A link was sent to recover the password to your mail.
+msg_mail_send_recover_password=A link  to recover the password was sent to your e-mail.
 m_report_casuistry=Casuistry
 usu_permission=Permissions
-cam_pass_current_pass_dont_match=The password entered in the field current password is not the same as that registered.
+cam_pass_current_pass_dont_match=Current pasword does not match
 cam_pass_msg_update_success=The password was changed successfully, please return to the login page.
-out_code=Outlet code
+out_code=Outlet Code
 out_phones=Phones
 out_type_phone=Phone type
 out_number=Number
@@ -228,8 +228,8 @@ out_website=Web site
 out_verification_number=Verification number
 out_wine=Wine
 out_beer=Beer
-out_spirtis=Spirtis
-out_msg_3party_exist=The selected distributor has already been added
+out_spirtis=Spirits
+out_msg_3party_exist=The selected Distributor has already been added
 loc_latitude=Latitude
 loc_longitude=Longitude
 sta_pending_tmc=Pending TMC
@@ -248,5 +248,5 @@ report_message_empty_list=The query returns no result.
 fs_account=My account
 mail_recover_pass=Recover password
 customer=Customer
-customer_msg_equal=The selected customer has already been added
+customer_msg_equal=The  customer selected has already been added
 mail_user_creation=Create user, OUTLETDATABASE
