--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -250,3 +250,7 @@ mail_recover_pass=Recover password
 customer=Customer
 customer_msg_equal=The  customer selected has already been added
 mail_user_creation=Create user, OUTLETDATABASE
+msg_not_outlets_select=There's no items selected to the massive operation.
+btn_approved_2=Approve
+btn_approved=Approved
+old=Old
