cliente sales ptesa

--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -254,3 +254,17 @@ msg_not_outlets_select=There's no items selected to the massive operation.
 btn_approved_2=Approve
 btn_approved=Approved
 old=Old
+id=Id
+m_sales_create=Create Seller
+m_sales_search=Check Seller
+out_distributor_new=New 3Party
+out_distributor_old=Old 3Party
+out_msg_not_record=There are no records to validate.
+out_distributor_segmentation=3Party Segmentation
+mail_notificacion=OUTLET Notification
+client_type=Customer Type
+sales=Seller
+sales_nombre=Seller Name
+sales_manager=Manager
+sales_code_distri=3Party Code
+sales_focalizado=Focused
