--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/message/Messages_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/message/Messages_en.properties
@@ -5,3 +5,5 @@ javax.faces.component.UIInput.REQUIRED = {0} Required field.
 javax.faces.component.UIInput.REQUIRED_detail = {0} Required field.
 primefaces.password.INVALID_MATCH=Invalid match
 primefaces.password.INVALID_MATCH_detail=Invalid match
+javax.faces.converter.DoubleConverter.DOUBLE=You must enter a numerical value
+javax.faces.converter.DoubleConverter.DOUBLE_detail=You must enter a numerical value
