--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -268,3 +268,5 @@ sales_nombre=Seller Name
 sales_manager=Manager
 sales_code_distri=3Party Code
 sales_focalizado=Focused
+btn_send_approved=Enviar Aprobaci\u00f3n
+cod_sap=C\u00f3digo SAP
