--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_es.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_es.properties
@@ -76,8 +76,8 @@ m_distri_consultar=Consultar Distribuidor
 m_distri_nombre=Canal del Distribuidor
 ###OUTLET
 m_outlet=Outlet
-m_outlet_crear=Crear Outlet
-m_outlet_consultar=Consultar Outlet
+m_outlet_crear=Crear Distribuidor
+m_outlet_consultar=Consultar Distribuidor
 m_outlet_carga=Carga masiva de outlets
 m_chain_create=Crear Cadena
 m_chain_search=Consultar Cadena
@@ -197,8 +197,8 @@ out_celular=Celular
 out_tel_uno=Tel\u00e9fono Uno
 out_tel_dos=Tel\u00e9fono Dos
 out_linea_negocio=L\u00ednea de Negocio
-out_codigo_ean=C\u00f3digo EAN
-out_punto_venta=Punto de Venta
+out_codigo_ean=C\u00f3digo EAN punto de venta
+out_punto_venta=codigo cliente en distribuidor
 out_kiernan=ID Kiernan
 out_cod_cliente_distri=C\u00f3digo cliente distribuidor
 out_seg_functional=Segmentaci\u00f3n funcional
@@ -255,7 +255,7 @@ pot_limit=L\u00edmites
 ############ CHAIN #############
 chain_code_chain_father=C\u00f3digo cadena
 chain_code_ean=C\u00f3digo EAN
-chain_name=Nombre cadena
+chain_name=Nombre punto de venta
 chain_business_name=Raz\u00f3n social
 chain_code_pdv=C\u00f3digo PDV
 chain_code_ean_pdv=C\u00f3digo EAN
@@ -297,3 +297,14 @@ sales_nombre=Nombre del vendedor
 sales_manager=Gerente
 sales_focalizado=Focalizado
 sales_code_distri=C\u00f3digo Distribuidor
+sales_territory_intouch=Territorio Intouch
+distri_pos_chain=Punto de venta cadena
+distri_pos_outlet=Punto de venta distribuidor
+code_meico=C\u00f3digo Meico
+code_altipal=C\u00f3digo Altipal
+code_dialsa=C\u00f3digo Dialsa
+code_chain=C\u00f3digo Cadena
+name_admin=Nombre Administrador
+chain_layer=Estrato
+btn_send_approved=Enviar Aprobaci\u00f3n
+cod_sap=C\u00f3digo SAP
