--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -270,3 +270,13 @@ sales_code_distri=3Party Code
 sales_focalizado=Focused
 btn_send_approved=Enviar Aprobaci\u00f3n
 cod_sap=C\u00f3digo SAP
+potential_name=Potential Name
+outlet_id=Outlet Id
+msg_not_reject=S\u00f3lo puede rechazar los de estado 'PENDIENTE DE APROBACION'
+msg_not_approved=S\u00f3lo puede aprobar los de estado
+session_expiration=La sesi\u00f3n ha expirado
+msg_session_expiration=
+msg_massive_approval=Est\u00e1 apunto de realizar una aprobaci\u00f3n masiva, \u00bfDesea continuar?
+confirmation=Confirmaci\u00f3n
+msg_massive_reject=Est\u00e1 apunto de rechazar masivamente, \u00bfDesea continuar?
+msg_without_sub_segment=No es posible dejar un outlet sin segmento.
