--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_es.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_es.properties
@@ -71,16 +71,16 @@ m_canal_sub=Gesti\u00f3n Sub Canal
 m_canal_sub_crear=Crear Sub Canal
 m_canal_sub_consultar=Consultar Sub Canal
 m_distribuidor=Distribuidor
-m_distri_crear=Crear Distribuidor
-m_distri_consultar=Consultar Distribuidor
-m_distri_nombre=Canal del Distribuidor
+m_distri_crear=Crear Distribuidor/Cadena
+m_distri_consultar=Consultar Distribuidor/Cadena
+m_distri_nombre=Sucursal Distribuidor/Cadena
 ###OUTLET
 m_outlet=Outlet
-m_outlet_crear=Crear Distribuidor
-m_outlet_consultar=Consultar Distribuidor
+m_outlet_crear=Crear outlet distribuidor
+m_outlet_consultar=Consultar outlet distribuidor
 m_outlet_carga=Carga masiva de outlets
-m_chain_create=Crear Cadena
-m_chain_search=Consultar Cadena
+m_chain_create=Creaci\u00f3n outlet cadena
+m_chain_search=Consultar outlet cadena
 ###BATTLEGROUND
 m_battleground=Battleground
 m_battleground_crear=Crear Battleground
@@ -92,7 +92,7 @@ m_distribuidor_consultar=Consultar Distribuidor
 m_distri_location=Ubicaci\u00f3n Distribuidor
 m_distri_location_create=Crear Ubicaci\u00f3n Distribuidor
 m_distri_location_search=Buscar Ubicaci\u00f3n Distribuidor
-distri_father=Distribuidor padre
+distri_father=Outlet Id Padre
 ###POTENTIAL
 m_management_potential=Gesti\u00f3n Potencial
 m_potential_create=Crear Potencial
@@ -171,7 +171,7 @@ sub_seg_subsegmento=Sub Segmento
 ######## OUTLET MODULO ############
 out_outlet=Outlet
 out_datos_basicos=Datos B\u00e1sicos
-out_clasificacion=Segmentaci\u00f3n
+out_clasificacion=Segmentaci\u00f3n Diageo
 out_ubicacion=Ubicaci\u00f3n
 out_datos_contacto=Datos Contacto
 out_otros_datos=Otros Datos
@@ -179,14 +179,14 @@ out_razon_social=Raz\u00f3n Social
 out_tipo_outlet=Tipo
 out_tipo_natural=Natural
 out_tipo_juri=Jur\u00eddico
-out_nombre=Nombre del Outlet
+out_nombre=Nombre Comercial
 out_nit=NIT
 out_nombre_propietario=Nombres Propietario
 out_apellidos_propietario=Apellidos Propietario
 out_potencial=Potencial
 out_distribuidor=Distribuidor
 out_distributor_new=Distribuidor Nuevo
-out_distributor_old=Distribuidor Antiguo
+out_distributor_old=Sucursal del Distribuidor
 out_distri_depto=Departamento Distribuidor
 out_out_depto=Departamento Outlet
 out_distri_mpio=Municipio Distribuidor
@@ -197,8 +197,8 @@ out_celular=Celular
 out_tel_uno=Tel\u00e9fono Uno
 out_tel_dos=Tel\u00e9fono Dos
 out_linea_negocio=L\u00ednea de Negocio
-out_codigo_ean=C\u00f3digo EAN punto de venta
-out_punto_venta=codigo cliente en distribuidor
+out_codigo_ean=Cod EAN punto de venta (GLN)
+out_punto_venta=C\u00f3digo cliente en distribuidor
 out_kiernan=ID Kiernan
 out_cod_cliente_distri=C\u00f3digo cliente distribuidor
 out_seg_functional=Segmentaci\u00f3n funcional
@@ -258,7 +258,7 @@ chain_code_ean=C\u00f3digo EAN
 chain_name=Nombre punto de venta
 chain_business_name=Raz\u00f3n social
 chain_code_pdv=C\u00f3digo PDV
-chain_code_ean_pdv=C\u00f3digo EAN
+chain_code_ean_pdv=Cod EAN Punto de Venta (GLN)
 chain_name_pdv=Nombre PDV
 chain_cluster=Cluster
 chain_phone=Tel\u00e9fono
@@ -298,8 +298,8 @@ sales_manager=Gerente
 sales_focalizado=Focalizado
 sales_code_distri=C\u00f3digo Distribuidor
 sales_territory_intouch=Territorio Intouch
-distri_pos_chain=Punto de venta cadena
-distri_pos_outlet=Punto de venta distribuidor
+distri_pos_chain=Cadena
+distri_pos_outlet=Distribuidor
 code_meico=C\u00f3digo Meico
 code_altipal=C\u00f3digo Altipal
 code_dialsa=C\u00f3digo Dialsa
@@ -308,3 +308,14 @@ name_admin=Nombre Administrador
 chain_layer=Estrato
 btn_send_approved=Enviar Aprobaci\u00f3n
 cod_sap=C\u00f3digo SAP
+potential_name=Nombre Potencial
+journey_plan=Journey Plan (Focalizado)
+outlet_id=Outlet Id
+msg_not_reject=S\u00f3lo puede rechazar los de estado 'PENDIENTE DE APROBACION'
+msg_not_approved=S\u00f3lo puede aprobar los de estado 'PENDIENTE DE APROBACION'
+session_expiration=Sesi\u00f3n expirada
+msg_session_expiration=Su sesi\u00f3n ha expirado
+msg_massive_approval=Est\u00e1 apunto de realizar una aprobaci\u00f3n masiva, \u00bfDesea continuar?
+confirmation=Confirmaci\u00f3n
+msg_massive_reject=Est\u00e1 apunto de rechazar masivamente, \u00bfDesea continuar?
+msg_without_sub_segment=No es posible dejar un outlet sin segmento.
