--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_en.properties
@@ -280,3 +280,13 @@ msg_massive_approval=Est\u00e1 apunto de realizar una aprobaci\u00f3n masiva, \u
 confirmation=Confirmaci\u00f3n
 msg_massive_reject=Est\u00e1 apunto de rechazar masivamente, \u00bfDesea continuar?
 msg_without_sub_segment=No es posible dejar un outlet sin segmento.
+tmc_outlet=Nombre TMC
+report_pending_management=Pendiente por Gesti\u00f3n
+report_relation_user_outlet=Reporte Relaci\u00f3n Usuario Outlet
+report_blancos=Reporte Blancos
+source=Origen
+distributor_name=Nombre del Distribuidor
+name_tmc_kam=Nombre TMC/KAM
+rol_cpa=Rol CP&A
+name_cpa=Nombre CP&A
+administrator_code=C\u00f3digo Administrador
