--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_es.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels_es.properties
@@ -321,8 +321,8 @@ msg_massive_reject=Est\u00e1 apunto de rechazar masivamente, \u00bfDesea continu
 msg_without_sub_segment=No es posible dejar un outlet sin segmento.
 tmc_outlet=Nombre TMC
 report_pending_management=Pendiente por Gesti\u00f3n
-report_relation_user_outlet=Reporte Relaci\u00f3n Usuario Outlet
-report_blancos=Reporte Blancos
+report_relation_user_outlet=Reporte Base completa
+report_blancos=Reporte Informacion incompleta
 source=Origen
 distributor_name=Nombre del Distribuidor
 name_tmc_kam=Nombre TMC/KAM
